--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Mon Cinéma Queer" />
     <meta property="og:url" content="https://moncinemaqueer.netlify.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/ShayReichert/mon-cinema-queer/master/src/assets/moncinemaqueer.jpg?token=GHSAT0AAAAAABZNUYRKJUMFILD7LMOCXSZUY4VT6OA" />
+    <meta property="og:image" content="https://moncinemaqueer.netlify.app/moncinemaqueer.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
