--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Mon Cinéma Queer - Les derniers films queer sortis" />
+    <meta name="description" content="Les derniers films queer sortis. Et c'est tout." />
     <meta property="og:title" content="Mon Cinéma Queer" />
     <meta property="og:url" content="https://moncinemaqueer.netlify.app/" />
     <meta property="og:type" content="website" />
